substrate/frame/support/test/tests/pallet_ui/storage_result_query_parenthesized_generics.stderr
error: expected `,`
  --> tests/pallet_ui/storage_result_query_parenthesized_generics.rs:35:55
   |
35 |     type Foo<T: Config> = StorageValue<_, u8, ResultQuery(NonExistentValue)>;
   |                                                          ^
